Fix horizontal scroll for mobile

--- a/src/app/app.style.css
+++ b/src/app/app.style.css
@@ -5,6 +5,7 @@
 body {
   font-family: "Ubuntu";
   padding-top: 111px; /* due to sticky top navigation */
+  overflow-x: hidden; /* due to a bootstrap issue */
 }
 
 .section {
