--- a/src/app/home/home.style.css
+++ b/src/app/home/home.style.css
@@ -435,9 +435,3 @@ img.left {
   margin-bottom: 4px;
 }
 
-.row { 
-  /* fix: remove horizontal scroll */
-  margin-right: 0px;
-  margin-left: 0px;
-}
-
